Atualizando campo de cadastro de novo produto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <div class="header">
         <a href="./index.html"><img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
         <div class="header-links" id="header-links">
             <ul class="header-options">
@@ -40,7 +40,7 @@
             </ul>
         </div>
         <span class="material-symbols-outlined" id="menu-hamburguer">menu</span>
-    </header>
+    </div>
 
     <div class="carrosselECategorias">
         <div class="carrossel">
