--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  
+   <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Favoritos</title>
+    <link rel="shortcut icon" href="../../images/icon_favorito.png" type="image/x-icon">
+
+    <link rel="stylesheet" href="../../style/main.css">
