--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -7,3 +7,4 @@
     <link rel="shortcut icon" href="../../images/icon_favorito.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../../style/main.css">
+    <link rel="stylesheet" href="../../style/favorito.css">
