--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <li><a class="header-link" href="#">Contato</a></li>
                 </div>
                 <div class="header-menu">
+                    <a href="./pages/favorito.html" title="Favoritos">
+                        <img class="favorito-icon" src="./images/icon_favorito.png" alt="Favorito">
+                    </a>
                     <a href="./pages/login.html" title="Login">
                         <img class="header-icon" src="./images/icon-login.png" alt="Login">
                     </a>
