--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a class="header-link" href="#">Promoções</a></li>
                     <li><a class="header-link" href="#">Contato</a></li>
                 </div>
-                <div class="favorito_icon"> 
+                <div class="favorito-icon"> 
                      <a href="./pages/favorito.html" title="Favoritos">
                         <img class="favorito-icon" src="./images/icon_favorito.png" alt="Favorito">
                     </a>
