--- a/pages/homeUsers.html
+++ b/pages/homeUsers.html
@@ -35,7 +35,7 @@
                     <a href="#" title="Meu carrinho">
                         <span class="material-symbols-outlined" id="icon-link">shopping_cart</span>
                     </a>
-                    <a href="#" title="Lista de desejos">
+                    <a href="favoritos.html" title="Lista de desejos">
                         <span class="material-symbols-outlined" id="icon-link">favorite</span>
                     </a>
                     <button class="btn-user" id="btn-user" title="Cliente: admin">
