--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -8,3 +8,13 @@
 
     <link rel="stylesheet" href="../../style/main.css">
     <link rel="stylesheet" href="../../style/favorito.css">
+</head>
+   <body>
+        <div class="header">
+        <a href="./index.html"><img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
+        <div class="header-links" id="header-links">
+
+
+           
+        </div>
+   </body>
