--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="../../style/favorito.css">
 </head>
    <body>
-        <div class="header">
+        <div class="header ">
         <a href="./index.html"><img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
-        <div class="header-links" id="header-links">
+        <div class="header-links" id="header-links"> 
 
-
-           
+            <a href="./homeUsers.html">
+            <span class="material-symbols-outlined button-back">arrow_back_ios</span>
+        </a>
         </div>
    </body>
