--- a/pages/novoProduto.html
+++ b/pages/novoProduto.html
@@ -23,32 +23,32 @@
         <label class="label" for="marca">Marca:</label>
         <select class="input" id="marca">
             <option value=""></option>
-            <option value="">Marca 1</option>
-            <option value="">Marca 2</option>
-            <option value="">Marca 3</option>
-            <option value="">Marca 4</option>
-            <option value="">Marca 5</option>
-            <option value="">Marca 6</option>
-            <option value="">Marca 7</option>
-            <option value="">Marca 8</option>
-            <option value="">Marca 9</option>
-            <option value="">Marca 10</option>
+            <option value="Marca 1">Marca 1</option>
+            <option value="Marca 2">Marca 2</option>
+            <option value="Marca 3">Marca 3</option>
+            <option value="Marca 4">Marca 4</option>
+            <option value="Marca 5">Marca 5</option>
+            <option value="Marca 6">Marca 6</option>
+            <option value="Marca 7">Marca 7</option>
+            <option value="Marca 8">Marca 8</option>
+            <option value="Marca 9">Marca 9</option>
+            <option value="Marca 10">Marca 10</option>
         </select>
         <label class="label" for="categoria">Categoria:</label>
         <select class="input" id="categoria">
             <option value=""></option>
-            <option value="">Rosto</option>
-            <option value="">Corpo</option>
-            <option value="">Cabelo Feminino</option>
-            <option value="">Cabelo Masculino</option>
-            <option value="">Barba</option>
+            <option value="Rosto">Rosto</option>
+            <option value="Corpo">Corpo</option>
+            <option value="Cabelo-Fem">Cabelo Feminino</option>
+            <option value="Cabelo-Mas">Cabelo Masculino</option>
+            <option value="Barba">Barba</option>
         </select>
         <label class="label" for="genero">Gênero:</label>
         <select class="input" id="genero">
             <option value=""></option>
-            <option value="">Unissex</option>
-            <option value="">Feminino</option>
-            <option value="">Masculino</option>
+            <option value="Unissex">Unissex</option>
+            <option value="Fem">Feminino</option>
+            <option value="Masc">Masculino</option>
         </select>
         <label class="label" for="descricao">Descrição:</label>
         <textarea class="input" id="descricao" cols="30" rows="10"></textarea>
@@ -60,6 +60,15 @@
         <input class="input" id="quantidade" type="number">
         <label class="label" for="preco">Preço:</label>
         <input class="input" type="text" id="preco">
+        <legend class="title">Endereço de origem</legend>
+        <label class="label" for="cep">CEP:</label>
+        <input class="input" type="text" id="cep">
+        <label class="label" for="endereco">Endereço:</label>
+        <input class="input" type="text" id="endereco">
+        <label class="label" for="bairro">Bairro:</label>
+        <input class="input" type="text" id="bairro">
+        <label class="label" for="cidade">Cidade:</label>
+        <input class="input" type="text" id="cidade">
         <button type="submit" class="button button-principal">Cadastrar</button>
     </form>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
