--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favoritos</title>
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../../style/main.css">
     <link rel="stylesheet" href="../../style/favorito.css">
 </head>
@@ -12,8 +13,6 @@
         <a href="./index.html"><img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
         <div class="header-links" id="header-links"> 
 
-            <a href="./homeUsers.html">
-            <span class="material-symbols-outlined button-back">arrow_back_ios</span>
-        </a>
+        
         </div>
    </body>
