--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -6,7 +6,7 @@
     <title>Favoritos</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../../style/main.css">
-    <link rel="stylesheet" href="../../style/favorito.css">
+    <link rel="stylesheet" href="../../style/home.css">
 </head>
    <body>
         <div class="header">
