--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -6,11 +6,13 @@
     <title>Favoritos</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../../style/main.css">
-    <link rel="stylesheet" href="../../style/home.css">
+    <link rel="stylesheet" href="../../style/favorito.css">
 </head>
    <body>
         <div class="header">
-        <a href="./index.html"><img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
+        <a href="./index.html"> 
+           <img src="../../images/logo.png" class="logo-header" alt="Logo Matiz Verdejante">
+        </a>
        
         </div>
       
