--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -10,9 +10,7 @@
 </head>
    <body>
         <div class="header">
-        <a href="./index.html"> 
-           <img src="../../images/logo.png" class="logo-header" alt="Logo Matiz Verdejante">
-        </a>
+        <a href="./homeUsers.html"><img src="../../images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
        
         </div>
       
