--- a/pages/homeUsers.html
+++ b/pages/homeUsers.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matiz Verdejante - Deixando o Mundo Mais Verde</title>
-    <link rel="shortcut icon" href="../../images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="../../style/main.css">
-    <link rel="stylesheet" href="../../style/desktop/_home.css">
-    <link rel="stylesheet" href="../../style/tablet/_home.css">
-    <link rel="stylesheet" href="../../style/mobile/_home.css">
+    <link rel="stylesheet" href="../style/main.css">
+    <link rel="stylesheet" href="../style/desktop/_home.css">
+    <link rel="stylesheet" href="../style/tablet/_home.css">
+    <link rel="stylesheet" href="../style/mobile/_home.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
@@ -18,12 +18,12 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <link rel="stylesheet" href="../../style/rating_style.css">
+    <link rel="stylesheet" href="../style/rating_style.css">
 </head>
 
 <body>
     <header class="header">
-        <a href="./homeUsers.html"><img src="../../images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
+        <a href="./homeUsers.html"><img src="../images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
         <div class="header-links" id="header-links">
             <ul class="header-options">
                 <div class="header-list">
@@ -39,13 +39,13 @@
                         <span class="material-symbols-outlined" id="icon-link">favorite</span>
                     </a>
                     <button class="btn-user" id="btn-user" title="Cliente: admin">
-                        <img class="header-icon" src="../../images/icon-login.png" alt="Login">
+                        <img class="header-icon" src="../images/icon-login.png" alt="Login">
                     </button>
                     <span class="material-symbols-outlined" id="btn-close">close</span>
                     <div class="menu-user" id="menu-user">
                         <div class="menu-user-header">
                             <button class="btn-user" id="btn-user" title="Cliente: admin">
-                                <img class="header-icon" src="../../images/icon-login.png" alt="Login">
+                                <img class="header-icon" src="../images/icon-login.png" alt="Login">
                             </button>
                             <span id="icon-link-secundary" class="material-symbols-outlined">close</span>
                         </div>
@@ -102,43 +102,43 @@
 
     <div class="carrosselECategorias">
         <div class="carrossel">
-            <img src="../../images/carrossel-home/image1.png" alt="Imagem carrossel">
-            <img src="../../images/carrossel-home/image2.png" alt="Imagem carrossel">
-            <img src="../../images/carrossel-home/image3.png" alt="Imagem carrossel">
-            <img src="../../images/carrossel-home/image4.png" alt="Imagem carrossel">
-            <img src="../../images/carrossel-home/image5.png" alt="Imagem carrossel">
-            <img src="../../images/carrossel-home/image6.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image1.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image2.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image3.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image4.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image5.png" alt="Imagem carrossel">
+            <img src="../images/carrossel-home/image6.png" alt="Imagem carrossel">
         </div>
         <section class="container categorias">
             <h2 class="title title-categorias">Busque por categorias</h2>
             <ul class="categoria-list">
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
                     <a href="./produtos.html"> 
-                        <img class="categoria-img" src="../../images/icons-categoria/rosto.png" alt="Rosto">
+                        <img class="categoria-img" src="../images/icons-categoria/rosto.png" alt="Rosto">
                         <h3 class="categoria-link">Rosto</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="500">
                     <a href="./produtos.html">
-                        <img class="categoria-img" src="../../images/icons-categoria/corpo.png" alt="Corpo">
+                        <img class="categoria-img" src="../images/icons-categoria/corpo.png" alt="Corpo">
                         <h3 class="categoria-link">Corpo</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="750">
                     <a href="./produtos.html">
-                        <img class="categoria-img" src="../../images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
+                        <img class="categoria-img" src="../images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
                         <h3 class="categoria-link">Feminino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1000">
                     <a href="./produtos.html">
-                        <img class="categoria-img" src="../../images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
+                        <img class="categoria-img" src="../images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
                         <h3 class="categoria-link">Masculino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1250">
                     <a href="./produtos.html">
-                        <img class="categoria-img" src="../../images/icons-categoria/barba.png" alt="Barba">
+                        <img class="categoria-img" src="../images/icons-categoria/barba.png" alt="Barba">
                         <h3 class="categoria-link">Barba</h3>
                     </a>
                 </li>
@@ -151,7 +151,7 @@
         <h2 class="title">Produtos em destaque: </h2>
         <ul class="destaque-lista">
             <li class="destaque-item" data-aos="zoom-in">
-                <img class="destaque-img" src="../../images/produtos-destaque/condicionador.png" alt="Condicionador">
+                <img class="destaque-img" src="../images/produtos-destaque/condicionador.png" alt="Condicionador">
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Condicionador intra cura</h4>
                     <p class="destaque-text">Experimente a sensação de ter cabelos mais saudáveis, brilhantes, radiantes e fortalecidos a cada lavagem. </p>
@@ -174,7 +174,7 @@
                 </div>
             </li>
             <li class="destaque-item" data-aos="zoom-in">
-                <img class="destaque-img" src="../../images/produtos-destaque/creme.png" alt="Creme">
+                <img class="destaque-img" src="../images/produtos-destaque/creme.png" alt="Creme">
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Creme Matiz Cereja</h4>
                     <p class="destaque-text">Desfrute de toda a deliciosa fragrância e sabor fresco da cereja, com um toque especial de cuidado que você merece.</p>
@@ -198,7 +198,7 @@
                 </div>
             </li>
             <li class="destaque-item" data-aos="zoom-in">
-                <img class="destaque-img" src="../../images/produtos-destaque/oleo.png" alt="Óleo">
+                <img class="destaque-img" src="../images/produtos-destaque/oleo.png" alt="Óleo">
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Oléo essencial</h4>
                     <p class="destaque-text">A essência pura da natureza em cada gota. Sinta a verdadeira essência para o seu dia a dia.</p>
@@ -221,7 +221,7 @@
                 </div>
             </li>
             <li class="destaque-item" data-aos="zoom-in">
-                <img class="destaque-img" src="../../images/produtos-destaque/shampo.png" alt="Shampo">
+                <img class="destaque-img" src="../images/produtos-destaque/shampo.png" alt="Shampo">
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Shampoo intra cura</h4>
                     <p class="destaque-text">Cuide da sua beleza capilar com o Shampoo Intra Cura e experimente a transformação que você merece.</p>
