--- a/pages/novoProduto.html
+++ b/pages/novoProduto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Produto</title>
-    <link rel="shortcut icon" href="../../images/logo.png">
+    <link rel="shortcut icon" href="../images/logo.png">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../style/desktop/_cadastro.css">
@@ -51,7 +51,7 @@
             <option value="Masc">Masculino</option>
         </select>
         <label class="label" for="descricao">Descrição:</label>
-        <textarea class="input" id="descricao" cols="30" rows="10"></textarea>
+        <textarea class="input" id="descricao" cols="30" rows="10" minlength="150"></textarea>
         <label class="label" for="historico">Histórico de sustentabilidade:</label>
         <textarea class="input" id="historico" cols="30" rows="10"></textarea>
         <label class="label" for="image">Imagens de Divulgação:</label>
