--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -13,7 +13,7 @@
         <a href="./homeUsers.html"><img src="../../images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
         </div>
 
-      <div class="#">
+      <div class="title">
          <h2 "Você não tem nenhum produto adicionado"</h2>
       </div>
       
