--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -14,7 +14,7 @@
         </div>
 
       <div class="container">
-      <span class="material-symbols-outlined" id="icon</sapn> <h2 class="title">Você não tem nenhum produto adicionado </h2> 
+     <h2 class="title">Você não tem nenhum produto adicionado </h2> 
          
       </div>
       
