--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="../../style/tablet/_cadastro.css">
     <link rel="stylesheet" href="../../style/mobile/_cadastro.css">
     
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div id="bodyCadastro">
         <div class="header header-secundary">
-            <a href="./login.html">
-                <span class="material-symbols-outlined button-back">arrow_back_ios</span>
+            <a href="./login.html" class="button-back">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+                </svg>
             </a>
         </div>
         <form class="form" id="formCliente">
