--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -15,7 +15,7 @@
 <body>
     <div id="bodyCadastro">
         <div class="header header-secundary">
-            <a href="./login.html" class="button-back">
+            <a href="./login.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
                 </svg>
@@ -23,26 +23,26 @@
         </div>
         <form class="form" id="formCliente">
             <label class="label" for="name">Primeiro nome</label>
-            <input class="input" id="name" type="text" placeholder="Insira seu primeiro nome">
+            <input class="input" id="name" type="text" placeholder="Insira seu primeiro nome" required>
             <label class="label" for="last-name">Sobrenome</label>
-            <input class="input" id="last-name" type="text" placeholder="Insira seu sobrenome">
+            <input class="input" id="last-name" type="text" placeholder="Insira seu sobrenome" required>
             <label class="label" for="data">Data de Nascimento</label>
-            <input class="input" id="data" type="date" placeholder="00/00/0000">
+            <input class="input" id="data" type="date" placeholder="00/00/0000" required>
             <label class="label" for="cpf">CPF</label>
-            <input class="input" id="cpf" placeholder="000.000.000-00">
+            <input class="input" id="cpf" placeholder="000.000.000-00" required>
             <label class="label" for="genero">Gênero</label>
-            <select id="genero" class="input">
+            <select id="genero" class="input" required>
                 <option value=""></option>
                 <option value="fem">Feminino</option>
                 <option value="masc">Masculino</option>
                 <option value="null">Prefiro não informar</option>
             </select>
             <label class="label" for="email">E-mail</label>
-            <input class="input" id="email" type="email" placeholder="Insira seu e-mail">
+            <input class="input" id="email" type="email" placeholder="Insira seu e-mail" required>
             <label class="label" for="celular">Celular</label>
-            <input class="input" id="celular" placeholder="(00) 00000-0000">
+            <input class="input" id="celular" placeholder="(00) 00000-0000" required>
             <label class="label" for="senha">Senha</label>
-            <input class="input" id="senha" type="password" placeholder="Crie sua senha" minlength="8" maxlength="25">
+            <input class="input" id="senha" type="password" placeholder="Crie sua senha" minlength="8" maxlength="25" required>
             <ul class="list-requisitos" id="list">
                 <li>Mínimo 8 caracteres, máximo 25</li>
                 <li>Mínimo uma letra maiúscula</li>
@@ -51,7 +51,7 @@
                 <li>Mínimo um caractere especial (ex: ! @ _ +)</li>
             </ul>
             <label class="label" for="repetirSenha">Repetir senha</label>
-            <input class="input" id="repetirSenha" type="password" placeholder="Digite novamente sua senha" minlength="8" maxlength="25">
+            <input class="input" id="repetirSenha" type="password" placeholder="Digite novamente sua senha" minlength="8" maxlength="25" required>
             <button class="button button-principal" id="criar" type="submit">Criar conta</button>
         </form>
     </div>
