--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -48,7 +48,6 @@
                                     <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
                                 </svg>
                             </div>
-                            
                         </div>
                         <ul class="menu-user-list">
                             <li>
@@ -116,7 +115,12 @@
                 </div>
             </ul>
         </div>
-        <span class="material-symbols-outlined" id="menu-hamburguer">menu</span>
+        <div id="menu-hamburguer">
+            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+            </svg>
+        </div>
+        
     </header>
     <main class="produtos container">
         <button id="btn-filtro">
