Criando form de compra

--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -175,7 +175,7 @@
                 <button class="button button-secundario">Aplicar</button>
             </form>
         </section>
-        <section>
+        <section id="produtos">
             <div class="produtos-categoria" id="rosto">
                 <h2 class="title">Rosto</h2>
                 <div class="list-produtos">
@@ -1262,7 +1262,10 @@
             </div>
             <div class="modal-body">
                 <div class="img-produto">
-                    <img class="produtos-img" src="https://via.placeholder.com/100x100.png" alt="">
+                    <img class="produtos-img" src="https://via.placeholder.com/300x300.png" alt="">
+                    <img class="produtos-img" src="https://via.placeholder.com/300x300.png" alt="">
+                    <img class="produtos-img" src="https://via.placeholder.com/300x300.png" alt="">
+                    <img class="produtos-img" src="https://via.placeholder.com/300x300.png" alt="">
                 </div>
                 <div>
                     <h3 class="title">lorem</h3>
