Arrumando links de busca por categoria

--- a/pages/compra.html
+++ b/pages/compra.html
@@ -157,9 +157,9 @@
                 <input class="input" type="number" placeholder="000">
                 <button class="button button-secundario">Adicionar cartão</button>
             </div>
+            <button class="button button-principal">Retornar</button>
             <button class="button button-principal">Revisar pedido</button>
         </form>
-
     </section>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
