--- a/pages/homeUsers.html
+++ b/pages/homeUsers.html
@@ -153,31 +153,31 @@
             <h2 class="title title-categorias">Busque por categorias</h2>
             <ul class="categoria-list">
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
-                    <a href="./produtos.html"> 
+                    <a href="./produtos.html#secao-rosto"> 
                         <img class="categoria-img" src="../images/icons-categoria/rosto.png" alt="Rosto">
                         <h3 class="categoria-link">Rosto</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="500">
-                    <a href="./produtos.html">
+                    <a href="./produtos.html#secao-corpo">
                         <img class="categoria-img" src="../images/icons-categoria/corpo.png" alt="Corpo">
                         <h3 class="categoria-link">Corpo</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="750">
-                    <a href="./produtos.html">
+                    <a href="./produtos.html#secao-cabelo-feminino">
                         <img class="categoria-img" src="../images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
                         <h3 class="categoria-link">Feminino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1000">
-                    <a href="./produtos.html">
+                    <a href="./produtos.html#secao-cabelo-masculino">
                         <img class="categoria-img" src="../images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
                         <h3 class="categoria-link">Masculino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1250">
-                    <a href="./produtos.html">
+                    <a href="./produtos.html#secao-barba">
                         <img class="categoria-img" src="../images/icons-categoria/barba.png" alt="Barba">
                         <h3 class="categoria-link">Barba</h3>
                     </a>
