--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -151,7 +151,7 @@
     </header>
     <main class="produtos container">
         <section id="produtos">
-            <div class="produtos-categoria" id="rosto">
+            <div class="produtos-categoria" id="secao-rosto">
                 <h2 class="title">Rosto</h2>
                 <div class="list-produtos">
                     <div class="produtos-item">
@@ -366,7 +366,7 @@
                     </div>
                 </div>
             </div>
-            <div class="produtos-categoria" id="corpo">
+            <div class="produtos-categoria" id="secao-corpo">
                 <h2 class="title">Corpo</h2>
                 <div class="list-produtos">
                     <div class="produtos-item">
@@ -581,7 +581,7 @@
                     </div>
                 </div>
             </div>
-            <div class="produtos-categoria" id="cabelo-fem">
+            <div class="produtos-categoria" id="secao-cabelo-feminino">
                 <h2 class="title">Cabelo Feminino</h2>
                 <div class="list-produtos">
                     <div class="produtos-item">
@@ -796,7 +796,7 @@
                     </div>
                 </div>
             </div>
-            <div class="produtos-categoria" id="cabelo-mas">
+            <div class="produtos-categoria" id="secao-cabelo-masculino">
                 <h2 class="title">Cabelo masculino</h2>
                 <div class="list-produtos">
                     <div class="produtos-item">
@@ -1011,7 +1011,7 @@
                     </div>
                 </div>
             </div>
-            <div class="produtos-categoria" id="barba">
+            <div class="produtos-categoria" id="secao-barba">
                 <h2 class="title">Barba</h2>
                 <div class="list-produtos">
                     <div class="produtos-item">
