Trabalhando no formulário de compra

--- a/pages/compra.html
+++ b/pages/compra.html
@@ -75,7 +75,7 @@
             <label class="label">Selecione a forma de pagamento:</label>
             <div class="pagamento">
                 <div class="pagamento-forma">
-                    <input type="radio" name="formaPagamento" id="pix">
+                    <input type="radio" name="formaPagamento" id="pix" value="pix">
                     <label class="pagamento-forma-label" for="pix">
                         <img class="pagamento-icon" src="../images/icons-pagamento/pix.png" alt="Pix">
                         <div>
@@ -85,7 +85,7 @@
                     </label>
                 </div>
                 <div class="pagamento-forma">
-                    <input type="radio" name="formaPagamento" id="boleto">
+                    <input type="radio" name="formaPagamento" id="boleto" value="boleto">
                     <label class="pagamento-forma-label" for="boleto">
                         <img class="pagamento-icon" src="../images/icons-pagamento/boleto.jpg" alt="Boleto">
                         <div>
@@ -95,7 +95,7 @@
                     </label>
                 </div>
                 <div class="pagamento-forma">
-                    <input type="radio" name="formaPagamento" id="cartao">
+                    <input type="radio" name="formaPagamento" id="cartao" value="cartao">
                     <label class="pagamento-forma-label" for="cartao">
                         <img class="pagamento-icon" src="../images/icons-pagamento/cartao.jfif" alt="Cartao">
                         <div>
