--- a/pages/homeUsers.html
+++ b/pages/homeUsers.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matiz Verdejante - Deixando o Mundo Mais Verde</title>
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
@@ -17,6 +18,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <link rel="stylesheet" href="../style/rating_style.css">
+    <link rel="stylesheet" href="../style/desktop/_favorito.css">
 </head>
 
 <body>
@@ -210,6 +212,12 @@
                     <div class="destaque-comprar">
                         <p>R$19.99</p>
                         <button class="button button-principal">Comprar</button>
+                         <input  type="checkbox" id="coracao" />
+    <label for="coracao">
+        <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="#19b425">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+        </svg>
+    </label>
                     </div>
                 </div>
             </li>
