--- a/pages/homeUsers.html
+++ b/pages/homeUsers.html
@@ -212,7 +212,7 @@
                     <div class="destaque-comprar">
                         <p>R$19.99</p>
                         <button class="button button-principal">Comprar</button>
-                        <div class="coracaoD">
+                        <div class="coracaoA">
                              <input  type="checkbox" id="coracao" />
     <label for="coracao">
         <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="#19b425">
@@ -243,7 +243,7 @@
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
                         <button class="button button-principal">Comprar</button>
-                         <div class="coracaoD">
+                         <div class="coracaoB">
                              <input  type="checkbox" id="coracao" />
     <label for="coracao">
         <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="#19b425">
@@ -274,7 +274,7 @@
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
                         <button class="button button-principal">Comprar</button>
-                         <div class="coracaoD">
+                         <div class="coracaoC">
                              <input  type="checkbox" id="coracao" />
     <label for="coracao">
         <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="#19b425">
