--- a/pages/homeUsers.html
+++ b/pages/homeUsers.html
@@ -213,8 +213,8 @@
                         <p>R$19.99</p>
                         <button class="button button-principal">Comprar</button>
                         <div class="coracaoA">
-                             <input  type="checkbox" id="coracao" />
-    <label for="coracao">
+                             <input  type="checkbox" id="coracaoA" />
+    <label for="coracaoA">
         <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="#19b425">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
         </svg>
@@ -244,8 +244,8 @@
                         <p>R$24.99</p>
                         <button class="button button-principal">Comprar</button>
                          <div class="coracaoB">
-                             <input  type="checkbox" id="coracao" />
-    <label for="coracao">
+                             <input  type="checkbox" id="coracaoB" />
+    <label for="coracaoB">
         <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="#19b425">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
         </svg>
@@ -275,8 +275,8 @@
                         <p>R$24.99</p>
                         <button class="button button-principal">Comprar</button>
                          <div class="coracaoC">
-                             <input  type="checkbox" id="coracao" />
-    <label for="coracao">
+                             <input  type="checkbox" id="coracaoC" />
+    <label for="coracaoC">
         <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="#19b425">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
         </svg>
@@ -306,8 +306,8 @@
                         <p>R$19.99</p>
                         <button class="button button-principal">Comprar</button>
                          <div class="coracaoD">
-                             <input  type="checkbox" id="coracao" />
-    <label for="coracao">
+                             <input  type="checkbox" id="coracaoD" />
+    <label for="coracaoD">
         <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="#19b425">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
         </svg>
