--- a/pages/homeUsers.html
+++ b/pages/homeUsers.html
@@ -195,7 +195,7 @@
             <li class="destaque-item" data-aos="zoom-in">
                 <img class="destaque-img" src="../images/produtos-destaque/condicionador.png" alt="Condicionador">
                 <div class="destaque-descricao">
-                    <h4 class="destaque-title">Condicionador intra cura</h4>
+                    <h4 class="destaque-title">Condicionador IntraCura</h4>
                     <p class="destaque-text">Experimente a sensação de ter cabelos mais saudáveis, brilhantes, radiantes e fortalecidos a cada lavagem. </p>
                     <div class="rating">
                         <input value="5" name="rate" id="star5" type="radio">
@@ -227,7 +227,7 @@
                 <img class="destaque-img" src="../images/produtos-destaque/creme.png" alt="Creme">
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Creme Matiz Cereja</h4>
-                    <p class="destaque-text">Desfrute de toda a deliciosa fragrância e sabor fresco da cereja, com um toque especial de cuidado que você merece.</p>
+                    <p class="destaque-text">Desfrute de toda a deliciosa fragrância e fresco de cereja, com um toque especial de cuidado que você merece.</p>
                     <div class="rating">
                         <input value="5" name="rate" id="star5" type="radio">
                         <label title="text" for="star5"></label>
@@ -257,7 +257,7 @@
             <li class="destaque-item" data-aos="zoom-in">
                 <img class="destaque-img" src="../images/produtos-destaque/oleo.png" alt="Óleo">
                 <div class="destaque-descricao">
-                    <h4 class="destaque-title">Oléo essencial</h4>
+                    <h4 class="destaque-title">Óleo essencial</h4>
                     <p class="destaque-text">A essência pura da natureza em cada gota. Sinta a verdadeira essência para o seu dia a dia.</p>
                     <div class="rating">
                         <input value="5" name="rate" id="star5" type="radio">
@@ -288,8 +288,8 @@
             <li class="destaque-item" data-aos="zoom-in">
                 <img class="destaque-img" src="../images/produtos-destaque/shampo.png" alt="Shampo">
                 <div class="destaque-descricao">
-                    <h4 class="destaque-title">Shampoo intra cura</h4>
-                    <p class="destaque-text">Cuide da sua beleza capilar com o Shampoo Intra Cura e experimente a transformação que você merece.</p>
+                    <h4 class="destaque-title">Shampoo IntraCura</h4>
+                    <p class="destaque-text">Cuide da sua beleza capilar com o Shampoo IntraCura e experimente a transformação que você merece.</p>
                     <div class="rating">
                         <input value="5" name="rate" id="star5" type="radio">
                         <label title="text" for="star5"></label>
@@ -321,7 +321,7 @@
 
     <section class="container">
         <h2 class="title">Sobre nós</h2>
-        <p class="text" data-aos="fade-up" data-aos-duration="250">Somos uma equipe apaixonada por cuidados com a pele e o meio ambiente. Nossa empresa nasceu do desejo de criar uma alternativa sustentável aos cosméticos convencionais, que muitas vezes contêm ingredientes prejudiciais à saúde e ao planeta.</p>
+        <p class="text" data-aos="fade-up" data-aos-duration="250">Somos uma equipe apaixonada por cuidados com a pele e o meio ambiente. Nossa empresa nasceu do desejo de criar uma alternativa sustentável aos cosméticos convencionais, que muitas vezes contém ingredientes prejudiciais à saúde e ao planeta.</p>
         <p class="text" data-aos="fade-up" data-aos-duration="500">Acreditamos que é possível alcançar a beleza sem comprometer o bem-estar pessoal e o meio ambiente. Nossos cosméticos são formulados com ingredientes naturais e orgânicos, livres de substâncias tóxicas e crueldade animal. Além disso, nossas embalagens são feitas de materiais recicláveis e biodegradáveis.</p>
         <p class="text" data-aos="fade-up" data-aos-duration="750">Oferecemos uma ampla gama de produtos para cuidados com a pele, cabelo e corpo. Desde cremes hidratantes e máscaras faciais até shampoos e condicionadores, nossos cosméticos são desenvolvidos com base em pesquisas científicas e ingredientes de origem sustentável.</p>
     </section>
