--- a/pages/homeUsers.html
+++ b/pages/homeUsers.html
@@ -227,7 +227,7 @@
                 <img class="destaque-img" src="../images/produtos-destaque/creme.png" alt="Creme">
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Creme Matiz Cereja</h4>
-                    <p class="destaque-text">Desfrute de toda a deliciosa fragrância e fresco de cereja, com um toque especial de cuidado que você merece.</p>
+                    <p class="destaque-text">Desfrute de toda a deliciosa fragrância e frescor de cereja, com um toque especial de cuidado que você merece.</p>
                     <div class="rating">
                         <input value="5" name="rate" id="star5" type="radio">
                         <label title="text" for="star5"></label>
